package design.pattern.behavioral.state.example.state.impl;

import design.pattern.behavioral.state.example.state.State;

public class FinishedState extends State {
	// 什么操作都不支持了...
}
